# SeqTruan

./: .gitignore  CMakeLists.txt  Launcher.pyw  README.md  SeqTruan.pro  build.bat  main.cpp  requirements.txt  setup.py
Module/: App.py  AudioPlayBack.py  C.py  Events.py  SequencePlayback.py  __init__.py
Panel/: Canvas.py  SeqTruanWindow.py  Transport.py  Viewport.py
events/: ActionEvent.h  ActionEvent.hpp  Event.h  Event.hpp  PlaybackEvent.h  PopupEvent.hpp  SequencePlaybackEvent.hpp  TrackModelEvent.cpp  TrackModelEvent.h  TrackModelEvent.hpp  subject.h
model/: App.h  App.hpp  AppExternal.hpp  ImageLoader.hpp  SImage.py  Singleton.cpp  Singleton.h  TrackFrameInfo.hpp  TrackInfo.hpp  TrackModel.cpp  TrackModel.h  TrackModel.hpp  TracksModel.py  __init__.py
model/playback/: AudioPlayback.cpp  AudioPlayback.h  AudioPlayback.hpp  SequencePlayback.cpp  SequencePlayback.h  SequencePlayback.hpp
module/: App.py  AudioPlayBack.py  C.py  Events.py  External.py  SImage.py  SequencePlayback.py  Shortcut.py  __init__.py
qrc/: button.qss  rc.qrc  slider.qss
qss/: build.bat  button.css  qrc.py  qss.qrc  scrollbar.css  slider.css  watchBuilder.py
test/: changeme
ui/: Canvas.py  SeqTruanWindow.py  Theme.py  Transport.py  Viewport.py  __init__.py
ui/composite/: Cursor.py  Frame.py  Timeline.py  TimelineToolBar.py  TimestampBar.py  Track.py  TrackArea.py  TrackFrame.py  TrackPanel.py  TrackPanelArea.py  TrackToolBar.py  __init__.py
ui/controls/: HBox.py  Slider.py
ui/panel/: __init__.py
utils/: B.py  Linker.hpp  Qss.py  Sh1tMacro.hpp  Watcher.py  __init__.py  test1.hpp
view/: OverWidget.cpp  OverWidget.h  OverWidget.hpp  Popup.hpp  SeqTruanWin.cpp  SeqTruanWin.h  SeqTruanWin.hpp  Theme.h  Theme.hpp  UI.h  UI.hpp
view/layout/: VBox.hpp
view/timeline/: FrameCursor.hpp  Timeline.cpp  Timeline.h  Timeline.hpp  TimelineToolBar.cpp  TimelineToolBar.h  TimelineToolBar.hpp  TimestampBar.cpp  TimestampBar.h  TimestampBar.hpp  Track.cpp  Track.h  Track.hpp  TrackArea.cpp  TrackArea.h  TrackArea.hpp  TrackCursor.cpp  TrackCursor.h  TrackCursor.hpp  TrackFrame.cpp  TrackFrame.h  TrackFrame.hpp  TrackFrameThumb.cpp  TrackFrameThumb.h  TrackPanelArea.cpp  TrackPanelArea.h  TrackToolBar.cpp  TrackToolBar.h
view/timeline/trackPanel/: OpacitySlider.hpp  TrackPanel.cpp  TrackPanel.h  TrackPanel.hpp  TrackPanelArea.cpp  TrackPanelArea.h  TrackPanelArea.hpp  TrackToolBar.cpp  TrackToolBar.hpp
view/viewport/: ComCanvas.hpp  Transport.cpp  Transport.h  Transport.hpp  ViewPort.cpp  ViewPort.h  ViewPort.hpp
